force-app/main/default/objects/MigrationRecordLog__c/MigrationRecordLog__c.object-meta.xml
<CustomObject>
    <description>Dual-purpose log written for every record committed to the target org. Serves as the rollback log (delete in reverse LoadOrder) and as the ID translation table (LegacyId to SalesforceId) for parent lookup resolution.</description>
    <label>Migration Record Log</label>
    <nameField>
        <displayFormat>LOG-{000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Migration Record Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>