force-app/main/default/objects/MigrationRecordLog__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>DML action that produced this record. Used by the rollback engine to target only Inserted records when rollback should not disturb pre-existing records that were updated.</description>
    <label>Action</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Inserted</fullName><default>false</default><label>Inserted</label></value>
            <value><fullName>Updated</fullName><default>false</default><label>Updated</label></value>
            <value><fullName>Upserted</fullName><default>false</default><label>Upserted</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>