force-app/main/default/objects/MigrationRecordLog__c/fields/ExternalIdValue__c.field-meta.xml
<CustomField>
    <fullName>ExternalIdValue__c</fullName>
    <description>Value of the configured external ID field on the target record. May differ from LegacyId in format (e.g. LegacyId is a numeric sequence; ExternalIdValue is a formatted code like ACC-00001).</description>
    <label>External ID Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>