force-app/main/default/objects/MigrationRecordLog__c/fields/LegacyId__c.field-meta.xml
<CustomField>
    <fullName>LegacyId__c</fullName>
    <description>Source system identifier for this record. Indexed as an External ID to enable fast lookup during parent FK resolution. Not enforced as unique because the same legacy ID value can appear across different object types.</description>
    <externalId>true</externalId>
    <label>Legacy ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>