force-app/main/default/objects/MigrationRecordLog__c/fields/LoadOrder__c.field-meta.xml
<CustomField>
    <fullName>LoadOrder__c</fullName>
    <description>Copied from MigrationObjectConfig.LoadOrder at write time. The rollback engine orders its delete batches by this field descending — children (higher LoadOrder) are deleted before parents (lower LoadOrder).</description>
    <label>Load Order</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>