force-app/main/default/objects/MigrationRecordLog__c/fields/MigrationBatch__c.field-meta.xml
<CustomField>
    <fullName>MigrationBatch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Which batch produced this log entry. Used to correlate rollback log entries with batch execution records during post-migration analysis.</description>
    <label>Migration Batch</label>
    <referenceTo>MigrationBatch__c</referenceTo>
    <relationshipLabel>Migration Record Logs</relationshipLabel>
    <relationshipName>MigrationRecordLogsBatch</relationshipName>
    <type>Lookup</type>
</CustomField>