force-app/main/default/objects/MigrationRecordLog__c/fields/ObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>ObjectApiName__c</fullName>
    <description>Salesforce API name of the object that was written. Used to filter ID resolution lookups to the correct object type without an additional join.</description>
    <label>Object API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>