force-app/main/default/objects/MigrationRecordLog__c/fields/RollbackStatus__c.field-meta.xml
<CustomField>
    <fullName>RollbackStatus__c</fullName>
    <description>Active: record still exists in target org. Deleted: successfully removed by the rollback engine. DeleteFailed: rollback attempt failed (record locked, already deleted externally, etc.).</description>
    <label>Rollback Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Active</fullName><default>true</default><label>Active</label></value>
            <value><fullName>Deleted</fullName><default>false</default><label>Deleted</label></value>
            <value><fullName>DeleteFailed</fullName><default>false</default><label>Delete Failed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>