force-app/main/default/objects/MigrationRecordLog__c/fields/SalesforceId__c.field-meta.xml
<CustomField>
    <fullName>SalesforceId__c</fullName>
    <description>The 18-character Salesforce record ID of the inserted or upserted record. Used by the rollback engine to target deletions and by child batch ID resolution.</description>
    <label>Salesforce ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>