force-app/main/default/objects/MigrationRecordLog__c/fields/WrittenAt__c.field-meta.xml
<CustomField>
    <fullName>WrittenAt__c</fullName>
    <description>Timestamp of the DML commit that created this log entry. Used for audit trail and post-migration analysis.</description>
    <label>Written At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>